# entrust

./: .editorconfig  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: entrust.yaml
examples/: derive_object.rs  entrust.rs
macros/: Cargo.toml
macros/src/: lib.rs  object.rs
src/: comparison.rs  conditions.rs  context.rs  database.rs  discardable.rs  entity.rs  id.rs  lib.rs  meta.rs  object.rs  record.rs  services.rs  sorting.rs  transaction.rs  updateable.rs  util.rs
