[package]
name = "entrust"
version = "0.2.9"
edition = "2021"
rust-version = "1.56.0"


[dependencies]
anyhow = "^1.0.48"
async_trait = { package = "async-trait", version = "^0.1.51" }
base64 = "^0.13.0"
bson = { version = "2.1.0-beta", features = ["chrono-0_4"] }
heck = "^0.3.3"
macros = { package = "entrust-macros", path = "./macros" }
mongodb = "2.1.0-beta"
pin_project = { package = "pin-project", version = "^1.0.8" }
serde = { version = "^1.0.130", features = ["derive"] }
tokio = { version = "^1.14.0", features = ["sync"] }
tracing = "^0.1.29"
typed_builder = { package = "typed-builder", version = "^0.9.1" }

[dependencies.chrono]
version = "^0.4.19"
default-features = false
features = ["std", "serde"]

[dependencies.futures]
package = "futures-core"
version = "^0.3.17"
default-features = false

[dependencies.futures_util]
package = "futures-util"
version = "^0.3.17"
default-features = false


[profile.dev]
split-debuginfo = "unpacked"
