[package]
name = "entrust-macros"
version = "0.2.12"
edition = "2018"
rust-version = "1.56.0"


[lib]
proc-macro = true


[dependencies]
proc_macro2 = { package = "proc-macro2", version = "^1.0.32" }
quote = "^1.0.10"

[dependencies.syn]
version = "^1.0.82"
default-features = false
features = ["derive", "proc-macro"]


[profile.dev]
split-debuginfo = "unpacked"
